--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.6.3",
     "babel-preset-react-app": "^10.0.1",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.1",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-bootstrap-validation": "^0.1.11",
